crates/kirin-derive-ir/src/tests/snapshots/kirin_derive_ir__tests__dialect__dialect_derive_enum_wraps_with_terminator.snap
---
source: crates/kirin-derive-ir/src/tests/dialect.rs
expression: generate_dialect_code(input)
---
#[automatically_derived]
impl<'a> ::kirin::ir::HasArguments<'a> for CfOps {
    type Iter = CfOpsArgumentsIter<'a>;
    fn arguments(&'a self) -> Self::Iter {
        match self {
            Self::Branch(field_0) => CfOpsArgumentsIter::Branch(
                <BranchOp as ::kirin::ir::HasArguments>::arguments(field_0),
            ),
            Self::Return(field_0) => CfOpsArgumentsIter::Return(
                <ReturnOp as ::kirin::ir::HasArguments>::arguments(field_0),
            ),
        }
    }
}
#[automatically_derived]
#[doc(hidden)]
pub enum CfOpsArgumentsIter<'a> {
    Branch(<BranchOp as ::kirin::ir::HasArguments<'a>>::Iter),
    Return(<ReturnOp as ::kirin::ir::HasArguments<'a>>::Iter),
}
#[automatically_derived]
impl<'a> Iterator for CfOpsArgumentsIter<'a> {
    type Item = &'a ::kirin::ir::SSAValue;
    fn next(&mut self) -> Option<Self::Item> {
        match self {
            Self::Branch(inner) => inner.next(),
            Self::Return(inner) => inner.next(),
        }
    }
}
#[automatically_derived]
impl<'a> ::kirin::ir::HasArgumentsMut<'a> for CfOps {
    type IterMut = CfOpsArgumentsMutIter<'a>;
    fn arguments_mut(&'a mut self) -> Self::IterMut {
        match self {
            Self::Branch(field_0) => CfOpsArgumentsMutIter::Branch(
                <BranchOp as ::kirin::ir::HasArgumentsMut>::arguments_mut(field_0),
            ),
            Self::Return(field_0) => CfOpsArgumentsMutIter::Return(
                <ReturnOp as ::kirin::ir::HasArgumentsMut>::arguments_mut(field_0),
            ),
        }
    }
}
#[automatically_derived]
#[doc(hidden)]
pub enum CfOpsArgumentsMutIter<'a> {
    Branch(<BranchOp as ::kirin::ir::HasArgumentsMut<'a>>::IterMut),
    Return(<ReturnOp as ::kirin::ir::HasArgumentsMut<'a>>::IterMut),
}
#[automatically_derived]
impl<'a> Iterator for CfOpsArgumentsMutIter<'a> {
    type Item = &'a mut ::kirin::ir::SSAValue;
    fn next(&mut self) -> Option<Self::Item> {
        match self {
            Self::Branch(inner) => inner.next(),
            Self::Return(inner) => inner.next(),
        }
    }
}
#[automatically_derived]
impl<'a> ::kirin::ir::HasResults<'a> for CfOps {
    type Iter = CfOpsResultsIter<'a>;
    fn results(&'a self) -> Self::Iter {
        match self {
            Self::Branch(field_0) => {
                CfOpsResultsIter::Branch(<BranchOp as ::kirin::ir::HasResults>::results(field_0))
            }
            Self::Return(field_0) => {
                CfOpsResultsIter::Return(<ReturnOp as ::kirin::ir::HasResults>::results(field_0))
            }
        }
    }
}
#[automatically_derived]
#[doc(hidden)]
pub enum CfOpsResultsIter<'a> {
    Branch(<BranchOp as ::kirin::ir::HasResults<'a>>::Iter),
    Return(<ReturnOp as ::kirin::ir::HasResults<'a>>::Iter),
}
#[automatically_derived]
impl<'a> Iterator for CfOpsResultsIter<'a> {
    type Item = &'a ::kirin::ir::ResultValue;
    fn next(&mut self) -> Option<Self::Item> {
        match self {
            Self::Branch(inner) => inner.next(),
            Self::Return(inner) => inner.next(),
        }
    }
}
#[automatically_derived]
impl<'a> ::kirin::ir::HasResultsMut<'a> for CfOps {
    type IterMut = CfOpsResultsMutIter<'a>;
    fn results_mut(&'a mut self) -> Self::IterMut {
        match self {
            Self::Branch(field_0) => CfOpsResultsMutIter::Branch(
                <BranchOp as ::kirin::ir::HasResultsMut>::results_mut(field_0),
            ),
            Self::Return(field_0) => CfOpsResultsMutIter::Return(
                <ReturnOp as ::kirin::ir::HasResultsMut>::results_mut(field_0),
            ),
        }
    }
}
#[automatically_derived]
#[doc(hidden)]
pub enum CfOpsResultsMutIter<'a> {
    Branch(<BranchOp as ::kirin::ir::HasResultsMut<'a>>::IterMut),
    Return(<ReturnOp as ::kirin::ir::HasResultsMut<'a>>::IterMut),
}
#[automatically_derived]
impl<'a> Iterator for CfOpsResultsMutIter<'a> {
    type Item = &'a mut ::kirin::ir::ResultValue;
    fn next(&mut self) -> Option<Self::Item> {
        match self {
            Self::Branch(inner) => inner.next(),
            Self::Return(inner) => inner.next(),
        }
    }
}
#[automatically_derived]
impl<'a> ::kirin::ir::HasBlocks<'a> for CfOps {
    type Iter = CfOpsBlocksIter<'a>;
    fn blocks(&'a self) -> Self::Iter {
        match self {
            Self::Branch(field_0) => {
                CfOpsBlocksIter::Branch(<BranchOp as ::kirin::ir::HasBlocks>::blocks(field_0))
            }
            Self::Return(field_0) => {
                CfOpsBlocksIter::Return(<ReturnOp as ::kirin::ir::HasBlocks>::blocks(field_0))
            }
        }
    }
}
#[automatically_derived]
#[doc(hidden)]
pub enum CfOpsBlocksIter<'a> {
    Branch(<BranchOp as ::kirin::ir::HasBlocks<'a>>::Iter),
    Return(<ReturnOp as ::kirin::ir::HasBlocks<'a>>::Iter),
}
#[automatically_derived]
impl<'a> Iterator for CfOpsBlocksIter<'a> {
    type Item = &'a ::kirin::ir::Block;
    fn next(&mut self) -> Option<Self::Item> {
        match self {
            Self::Branch(inner) => inner.next(),
            Self::Return(inner) => inner.next(),
        }
    }
}
#[automatically_derived]
impl<'a> ::kirin::ir::HasBlocksMut<'a> for CfOps {
    type IterMut = CfOpsBlocksMutIter<'a>;
    fn blocks_mut(&'a mut self) -> Self::IterMut {
        match self {
            Self::Branch(field_0) => CfOpsBlocksMutIter::Branch(
                <BranchOp as ::kirin::ir::HasBlocksMut>::blocks_mut(field_0),
            ),
            Self::Return(field_0) => CfOpsBlocksMutIter::Return(
                <ReturnOp as ::kirin::ir::HasBlocksMut>::blocks_mut(field_0),
            ),
        }
    }
}
#[automatically_derived]
#[doc(hidden)]
pub enum CfOpsBlocksMutIter<'a> {
    Branch(<BranchOp as ::kirin::ir::HasBlocksMut<'a>>::IterMut),
    Return(<ReturnOp as ::kirin::ir::HasBlocksMut<'a>>::IterMut),
}
#[automatically_derived]
impl<'a> Iterator for CfOpsBlocksMutIter<'a> {
    type Item = &'a mut ::kirin::ir::Block;
    fn next(&mut self) -> Option<Self::Item> {
        match self {
            Self::Branch(inner) => inner.next(),
            Self::Return(inner) => inner.next(),
        }
    }
}
#[automatically_derived]
impl<'a> ::kirin::ir::HasSuccessors<'a> for CfOps {
    type Iter = CfOpsSuccessorsIter<'a>;
    fn successors(&'a self) -> Self::Iter {
        match self {
            Self::Branch(field_0) => CfOpsSuccessorsIter::Branch(
                <BranchOp as ::kirin::ir::HasSuccessors>::successors(field_0),
            ),
            Self::Return(field_0) => CfOpsSuccessorsIter::Return(
                <ReturnOp as ::kirin::ir::HasSuccessors>::successors(field_0),
            ),
        }
    }
}
#[automatically_derived]
#[doc(hidden)]
pub enum CfOpsSuccessorsIter<'a> {
    Branch(<BranchOp as ::kirin::ir::HasSuccessors<'a>>::Iter),
    Return(<ReturnOp as ::kirin::ir::HasSuccessors<'a>>::Iter),
}
#[automatically_derived]
impl<'a> Iterator for CfOpsSuccessorsIter<'a> {
    type Item = &'a ::kirin::ir::Successor;
    fn next(&mut self) -> Option<Self::Item> {
        match self {
            Self::Branch(inner) => inner.next(),
            Self::Return(inner) => inner.next(),
        }
    }
}
#[automatically_derived]
impl<'a> ::kirin::ir::HasSuccessorsMut<'a> for CfOps {
    type IterMut = CfOpsSuccessorsMutIter<'a>;
    fn successors_mut(&'a mut self) -> Self::IterMut {
        match self {
            Self::Branch(field_0) => CfOpsSuccessorsMutIter::Branch(
                <BranchOp as ::kirin::ir::HasSuccessorsMut>::successors_mut(field_0),
            ),
            Self::Return(field_0) => CfOpsSuccessorsMutIter::Return(
                <ReturnOp as ::kirin::ir::HasSuccessorsMut>::successors_mut(field_0),
            ),
        }
    }
}
#[automatically_derived]
#[doc(hidden)]
pub enum CfOpsSuccessorsMutIter<'a> {
    Branch(<BranchOp as ::kirin::ir::HasSuccessorsMut<'a>>::IterMut),
    Return(<ReturnOp as ::kirin::ir::HasSuccessorsMut<'a>>::IterMut),
}
#[automatically_derived]
impl<'a> Iterator for CfOpsSuccessorsMutIter<'a> {
    type Item = &'a mut ::kirin::ir::Successor;
    fn next(&mut self) -> Option<Self::Item> {
        match self {
            Self::Branch(inner) => inner.next(),
            Self::Return(inner) => inner.next(),
        }
    }
}
#[automatically_derived]
impl<'a> ::kirin::ir::HasCFG<'a> for CfOps {
    type Iter = CfOpsCFGIter<'a>;
    fn cfgs(&'a self) -> Self::Iter {
        match self {
            Self::Branch(field_0) => {
                CfOpsCFGIter::Branch(<BranchOp as ::kirin::ir::HasCFG>::cfgs(field_0))
            }
            Self::Return(field_0) => {
                CfOpsCFGIter::Return(<ReturnOp as ::kirin::ir::HasCFG>::cfgs(field_0))
            }
        }
    }
}
#[automatically_derived]
#[doc(hidden)]
pub enum CfOpsCFGIter<'a> {
    Branch(<BranchOp as ::kirin::ir::HasCFG<'a>>::Iter),
    Return(<ReturnOp as ::kirin::ir::HasCFG<'a>>::Iter),
}
#[automatically_derived]
impl<'a> Iterator for CfOpsCFGIter<'a> {
    type Item = &'a ::kirin::ir::CFG;
    fn next(&mut self) -> Option<Self::Item> {
        match self {
            Self::Branch(inner) => inner.next(),
            Self::Return(inner) => inner.next(),
        }
    }
}
#[automatically_derived]
impl<'a> ::kirin::ir::HasCFGMut<'a> for CfOps {
    type IterMut = CfOpsCFGMutIter<'a>;
    fn cfgs_mut(&'a mut self) -> Self::IterMut {
        match self {
            Self::Branch(field_0) => {
                CfOpsCFGMutIter::Branch(<BranchOp as ::kirin::ir::HasCFGMut>::cfgs_mut(field_0))
            }
            Self::Return(field_0) => {
                CfOpsCFGMutIter::Return(<ReturnOp as ::kirin::ir::HasCFGMut>::cfgs_mut(field_0))
            }
        }
    }
}
#[automatically_derived]
#[doc(hidden)]
pub enum CfOpsCFGMutIter<'a> {
    Branch(<BranchOp as ::kirin::ir::HasCFGMut<'a>>::IterMut),
    Return(<ReturnOp as ::kirin::ir::HasCFGMut<'a>>::IterMut),
}
#[automatically_derived]
impl<'a> Iterator for CfOpsCFGMutIter<'a> {
    type Item = &'a mut ::kirin::ir::CFG;
    fn next(&mut self) -> Option<Self::Item> {
        match self {
            Self::Branch(inner) => inner.next(),
            Self::Return(inner) => inner.next(),
        }
    }
}
#[automatically_derived]
impl<'a> ::kirin::ir::HasDigraphs<'a> for CfOps {
    type Iter = CfOpsDigraphsIter<'a>;
    fn digraphs(&'a self) -> Self::Iter {
        match self {
            Self::Branch(field_0) => {
                CfOpsDigraphsIter::Branch(<BranchOp as ::kirin::ir::HasDigraphs>::digraphs(field_0))
            }
            Self::Return(field_0) => {
                CfOpsDigraphsIter::Return(<ReturnOp as ::kirin::ir::HasDigraphs>::digraphs(field_0))
            }
        }
    }
}
#[automatically_derived]
#[doc(hidden)]
pub enum CfOpsDigraphsIter<'a> {
    Branch(<BranchOp as ::kirin::ir::HasDigraphs<'a>>::Iter),
    Return(<ReturnOp as ::kirin::ir::HasDigraphs<'a>>::Iter),
}
#[automatically_derived]
impl<'a> Iterator for CfOpsDigraphsIter<'a> {
    type Item = &'a ::kirin::ir::DiGraph;
    fn next(&mut self) -> Option<Self::Item> {
        match self {
            Self::Branch(inner) => inner.next(),
            Self::Return(inner) => inner.next(),
        }
    }
}
#[automatically_derived]
impl<'a> ::kirin::ir::HasDigraphsMut<'a> for CfOps {
    type IterMut = CfOpsDigraphsMutIter<'a>;
    fn digraphs_mut(&'a mut self) -> Self::IterMut {
        match self {
            Self::Branch(field_0) => CfOpsDigraphsMutIter::Branch(
                <BranchOp as ::kirin::ir::HasDigraphsMut>::digraphs_mut(field_0),
            ),
            Self::Return(field_0) => CfOpsDigraphsMutIter::Return(
                <ReturnOp as ::kirin::ir::HasDigraphsMut>::digraphs_mut(field_0),
            ),
        }
    }
}
#[automatically_derived]
#[doc(hidden)]
pub enum CfOpsDigraphsMutIter<'a> {
    Branch(<BranchOp as ::kirin::ir::HasDigraphsMut<'a>>::IterMut),
    Return(<ReturnOp as ::kirin::ir::HasDigraphsMut<'a>>::IterMut),
}
#[automatically_derived]
impl<'a> Iterator for CfOpsDigraphsMutIter<'a> {
    type Item = &'a mut ::kirin::ir::DiGraph;
    fn next(&mut self) -> Option<Self::Item> {
        match self {
            Self::Branch(inner) => inner.next(),
            Self::Return(inner) => inner.next(),
        }
    }
}
#[automatically_derived]
impl<'a> ::kirin::ir::HasUngraphs<'a> for CfOps {
    type Iter = CfOpsUngraphsIter<'a>;
    fn ungraphs(&'a self) -> Self::Iter {
        match self {
            Self::Branch(field_0) => {
                CfOpsUngraphsIter::Branch(<BranchOp as ::kirin::ir::HasUngraphs>::ungraphs(field_0))
            }
            Self::Return(field_0) => {
                CfOpsUngraphsIter::Return(<ReturnOp as ::kirin::ir::HasUngraphs>::ungraphs(field_0))
            }
        }
    }
}
#[automatically_derived]
#[doc(hidden)]
pub enum CfOpsUngraphsIter<'a> {
    Branch(<BranchOp as ::kirin::ir::HasUngraphs<'a>>::Iter),
    Return(<ReturnOp as ::kirin::ir::HasUngraphs<'a>>::Iter),
}
#[automatically_derived]
impl<'a> Iterator for CfOpsUngraphsIter<'a> {
    type Item = &'a ::kirin::ir::UnGraph;
    fn next(&mut self) -> Option<Self::Item> {
        match self {
            Self::Branch(inner) => inner.next(),
            Self::Return(inner) => inner.next(),
        }
    }
}
#[automatically_derived]
impl<'a> ::kirin::ir::HasUngraphsMut<'a> for CfOps {
    type IterMut = CfOpsUngraphsMutIter<'a>;
    fn ungraphs_mut(&'a mut self) -> Self::IterMut {
        match self {
            Self::Branch(field_0) => CfOpsUngraphsMutIter::Branch(
                <BranchOp as ::kirin::ir::HasUngraphsMut>::ungraphs_mut(field_0),
            ),
            Self::Return(field_0) => CfOpsUngraphsMutIter::Return(
                <ReturnOp as ::kirin::ir::HasUngraphsMut>::ungraphs_mut(field_0),
            ),
        }
    }
}
#[automatically_derived]
#[doc(hidden)]
pub enum CfOpsUngraphsMutIter<'a> {
    Branch(<BranchOp as ::kirin::ir::HasUngraphsMut<'a>>::IterMut),
    Return(<ReturnOp as ::kirin::ir::HasUngraphsMut<'a>>::IterMut),
}
#[automatically_derived]
impl<'a> Iterator for CfOpsUngraphsMutIter<'a> {
    type Item = &'a mut ::kirin::ir::UnGraph;
    fn next(&mut self) -> Option<Self::Item> {
        match self {
            Self::Branch(inner) => inner.next(),
            Self::Return(inner) => inner.next(),
        }
    }
}
#[automatically_derived]
impl ::kirin::ir::IsTerminator for CfOps {
    fn is_terminator(&self) -> bool {
        match self {
            Self::Branch(field_0) => {
                <BranchOp as ::kirin::ir::IsTerminator>::is_terminator(field_0)
            }
            Self::Return(field_0) => {
                <ReturnOp as ::kirin::ir::IsTerminator>::is_terminator(field_0)
            }
        }
    }
}
#[automatically_derived]
impl ::kirin::ir::IsConstant for CfOps {
    fn is_constant(&self) -> bool {
        match self {
            Self::Branch(field_0) => <BranchOp as ::kirin::ir::IsConstant>::is_constant(field_0),
            Self::Return(field_0) => <ReturnOp as ::kirin::ir::IsConstant>::is_constant(field_0),
        }
    }
}
#[automatically_derived]
impl ::kirin::ir::IsPure for CfOps {
    fn is_pure(&self) -> bool {
        match self {
            Self::Branch(field_0) => <BranchOp as ::kirin::ir::IsPure>::is_pure(field_0),
            Self::Return(field_0) => <ReturnOp as ::kirin::ir::IsPure>::is_pure(field_0),
        }
    }
}
#[automatically_derived]
impl ::kirin::ir::IsSpeculatable for CfOps {
    fn is_speculatable(&self) -> bool {
        match self {
            Self::Branch(field_0) => {
                <BranchOp as ::kirin::ir::IsSpeculatable>::is_speculatable(field_0)
            }
            Self::Return(field_0) => {
                <ReturnOp as ::kirin::ir::IsSpeculatable>::is_speculatable(field_0)
            }
        }
    }
}
#[automatically_derived]
impl ::kirin::ir::IsEdge for CfOps {
    fn is_edge(&self) -> bool {
        match self {
            Self::Branch(field_0) => <BranchOp as ::kirin::ir::IsEdge>::is_edge(field_0),
            Self::Return(field_0) => <ReturnOp as ::kirin::ir::IsEdge>::is_edge(field_0),
        }
    }
}
#[automatically_derived]
impl ::kirin::ir::Dialect for CfOps {
    type Type = SimpleType;
}
#[automatically_derived]
impl ::kirin::ir::HasSignature<Self> for CfOps {
    fn signature(&self) -> Option<::kirin::ir::Signature<<Self as ::kirin::ir::Dialect>::Type>> {
        match self {
            Self::Branch(field_0) => {
                <BranchOp as ::kirin::ir::HasSignature<BranchOp>>::signature(field_0)
            }
            Self::Return(field_0) => {
                <ReturnOp as ::kirin::ir::HasSignature<ReturnOp>>::signature(field_0)
            }
        }
    }
}
#[automatically_derived]
impl ::kirin::ir::HasCallableBody for CfOps
where
    BranchOp: ::kirin::ir::HasCallableBody,
    ReturnOp: ::kirin::ir::HasCallableBody,
{
    fn callable_body(&self) -> ::core::option::Option<::kirin::ir::Body> {
        match self {
            Self::Branch(field_0) => {
                <BranchOp as ::kirin::ir::HasCallableBody>::callable_body(field_0)
            }
            Self::Return(field_0) => {
                <ReturnOp as ::kirin::ir::HasCallableBody>::callable_body(field_0)
            }
        }
    }
}
#[automatically_derived]
impl ::core::convert::From<BranchOp> for CfOps {
    fn from(from: BranchOp) -> Self {
        CfOps::Branch(from)
    }
}
#[automatically_derived]
impl ::kirin::ir::TryProjectTo<BranchOp> for CfOps {
    type Error = ::kirin::ir::ProjectError;
    fn try_project_to(self) -> ::core::result::Result<BranchOp, Self::Error> {
        match self {
            CfOps::Branch(inner) => Ok(inner),
            _ => Err(::kirin::ir::ProjectError::InvalidVariant),
        }
    }
}
#[automatically_derived]
impl ::core::convert::From<ReturnOp> for CfOps {
    fn from(from: ReturnOp) -> Self {
        CfOps::Return(from)
    }
}
#[automatically_derived]
impl ::kirin::ir::TryProjectTo<ReturnOp> for CfOps {
    type Error = ::kirin::ir::ProjectError;
    fn try_project_to(self) -> ::core::result::Result<ReturnOp, Self::Error> {
        match self {
            CfOps::Return(inner) => Ok(inner),
            _ => Err(::kirin::ir::ProjectError::InvalidVariant),
        }
    }
}
