crates/kirin-derive-ir/src/tests/snapshots/kirin_derive_ir__tests__dialect__dialect_derive_struct_all_properties.snap
---
source: crates/kirin-derive-ir/src/tests/dialect.rs
expression: generate_dialect_code(input)
---
#[automatically_derived]
impl<'a> ::kirin::ir::HasArguments<'a> for Constant {
    type Iter = ConstantArgumentsIter<'a>;
    fn arguments(&'a self) -> Self::Iter {
        let Self { result } = self;
        ConstantArgumentsIter {
            inner: std::iter::empty::<&'a ::kirin::ir::SSAValue>(),
        }
    }
}
#[automatically_derived]
#[doc(hidden)]
pub struct ConstantArgumentsIter<'a> {
    inner: std::iter::Empty<&'a ::kirin::ir::SSAValue>,
}
#[automatically_derived]
impl<'a> Iterator for ConstantArgumentsIter<'a> {
    type Item = &'a ::kirin::ir::SSAValue;
    fn next(&mut self) -> Option<Self::Item> {
        self.inner.next()
    }
}
#[automatically_derived]
impl<'a> ::kirin::ir::HasArgumentsMut<'a> for Constant {
    type IterMut = ConstantArgumentsMutIter<'a>;
    fn arguments_mut(&'a mut self) -> Self::IterMut {
        let Self { result } = self;
        ConstantArgumentsMutIter {
            inner: std::iter::empty::<&'a mut ::kirin::ir::SSAValue>(),
        }
    }
}
#[automatically_derived]
#[doc(hidden)]
pub struct ConstantArgumentsMutIter<'a> {
    inner: std::iter::Empty<&'a mut ::kirin::ir::SSAValue>,
}
#[automatically_derived]
impl<'a> Iterator for ConstantArgumentsMutIter<'a> {
    type Item = &'a mut ::kirin::ir::SSAValue;
    fn next(&mut self) -> Option<Self::Item> {
        self.inner.next()
    }
}
#[automatically_derived]
impl<'a> ::kirin::ir::HasResults<'a> for Constant {
    type Iter = ConstantResultsIter<'a>;
    fn results(&'a self) -> Self::Iter {
        let Self { result } = self;
        ConstantResultsIter {
            inner: std::iter::once(result),
        }
    }
}
#[automatically_derived]
#[doc(hidden)]
pub struct ConstantResultsIter<'a> {
    inner: std::iter::Once<&'a ::kirin::ir::ResultValue>,
}
#[automatically_derived]
impl<'a> Iterator for ConstantResultsIter<'a> {
    type Item = &'a ::kirin::ir::ResultValue;
    fn next(&mut self) -> Option<Self::Item> {
        self.inner.next()
    }
}
#[automatically_derived]
impl<'a> ::kirin::ir::HasResultsMut<'a> for Constant {
    type IterMut = ConstantResultsMutIter<'a>;
    fn results_mut(&'a mut self) -> Self::IterMut {
        let Self { result } = self;
        ConstantResultsMutIter {
            inner: std::iter::once(result),
        }
    }
}
#[automatically_derived]
#[doc(hidden)]
pub struct ConstantResultsMutIter<'a> {
    inner: std::iter::Once<&'a mut ::kirin::ir::ResultValue>,
}
#[automatically_derived]
impl<'a> Iterator for ConstantResultsMutIter<'a> {
    type Item = &'a mut ::kirin::ir::ResultValue;
    fn next(&mut self) -> Option<Self::Item> {
        self.inner.next()
    }
}
#[automatically_derived]
impl<'a> ::kirin::ir::HasBlocks<'a> for Constant {
    type Iter = ConstantBlocksIter<'a>;
    fn blocks(&'a self) -> Self::Iter {
        let Self { result } = self;
        ConstantBlocksIter {
            inner: std::iter::empty::<&'a ::kirin::ir::Block>(),
        }
    }
}
#[automatically_derived]
#[doc(hidden)]
pub struct ConstantBlocksIter<'a> {
    inner: std::iter::Empty<&'a ::kirin::ir::Block>,
}
#[automatically_derived]
impl<'a> Iterator for ConstantBlocksIter<'a> {
    type Item = &'a ::kirin::ir::Block;
    fn next(&mut self) -> Option<Self::Item> {
        self.inner.next()
    }
}
#[automatically_derived]
impl<'a> ::kirin::ir::HasBlocksMut<'a> for Constant {
    type IterMut = ConstantBlocksMutIter<'a>;
    fn blocks_mut(&'a mut self) -> Self::IterMut {
        let Self { result } = self;
        ConstantBlocksMutIter {
            inner: std::iter::empty::<&'a mut ::kirin::ir::Block>(),
        }
    }
}
#[automatically_derived]
#[doc(hidden)]
pub struct ConstantBlocksMutIter<'a> {
    inner: std::iter::Empty<&'a mut ::kirin::ir::Block>,
}
#[automatically_derived]
impl<'a> Iterator for ConstantBlocksMutIter<'a> {
    type Item = &'a mut ::kirin::ir::Block;
    fn next(&mut self) -> Option<Self::Item> {
        self.inner.next()
    }
}
#[automatically_derived]
impl<'a> ::kirin::ir::HasSuccessors<'a> for Constant {
    type Iter = ConstantSuccessorsIter<'a>;
    fn successors(&'a self) -> Self::Iter {
        let Self { result } = self;
        ConstantSuccessorsIter {
            inner: std::iter::empty::<&'a ::kirin::ir::Successor>(),
        }
    }
}
#[automatically_derived]
#[doc(hidden)]
pub struct ConstantSuccessorsIter<'a> {
    inner: std::iter::Empty<&'a ::kirin::ir::Successor>,
}
#[automatically_derived]
impl<'a> Iterator for ConstantSuccessorsIter<'a> {
    type Item = &'a ::kirin::ir::Successor;
    fn next(&mut self) -> Option<Self::Item> {
        self.inner.next()
    }
}
#[automatically_derived]
impl<'a> ::kirin::ir::HasSuccessorsMut<'a> for Constant {
    type IterMut = ConstantSuccessorsMutIter<'a>;
    fn successors_mut(&'a mut self) -> Self::IterMut {
        let Self { result } = self;
        ConstantSuccessorsMutIter {
            inner: std::iter::empty::<&'a mut ::kirin::ir::Successor>(),
        }
    }
}
#[automatically_derived]
#[doc(hidden)]
pub struct ConstantSuccessorsMutIter<'a> {
    inner: std::iter::Empty<&'a mut ::kirin::ir::Successor>,
}
#[automatically_derived]
impl<'a> Iterator for ConstantSuccessorsMutIter<'a> {
    type Item = &'a mut ::kirin::ir::Successor;
    fn next(&mut self) -> Option<Self::Item> {
        self.inner.next()
    }
}
#[automatically_derived]
impl<'a> ::kirin::ir::HasCFG<'a> for Constant {
    type Iter = ConstantCFGIter<'a>;
    fn cfgs(&'a self) -> Self::Iter {
        let Self { result } = self;
        ConstantCFGIter {
            inner: std::iter::empty::<&'a ::kirin::ir::CFG>(),
        }
    }
}
#[automatically_derived]
#[doc(hidden)]
pub struct ConstantCFGIter<'a> {
    inner: std::iter::Empty<&'a ::kirin::ir::CFG>,
}
#[automatically_derived]
impl<'a> Iterator for ConstantCFGIter<'a> {
    type Item = &'a ::kirin::ir::CFG;
    fn next(&mut self) -> Option<Self::Item> {
        self.inner.next()
    }
}
#[automatically_derived]
impl<'a> ::kirin::ir::HasCFGMut<'a> for Constant {
    type IterMut = ConstantCFGMutIter<'a>;
    fn cfgs_mut(&'a mut self) -> Self::IterMut {
        let Self { result } = self;
        ConstantCFGMutIter {
            inner: std::iter::empty::<&'a mut ::kirin::ir::CFG>(),
        }
    }
}
#[automatically_derived]
#[doc(hidden)]
pub struct ConstantCFGMutIter<'a> {
    inner: std::iter::Empty<&'a mut ::kirin::ir::CFG>,
}
#[automatically_derived]
impl<'a> Iterator for ConstantCFGMutIter<'a> {
    type Item = &'a mut ::kirin::ir::CFG;
    fn next(&mut self) -> Option<Self::Item> {
        self.inner.next()
    }
}
#[automatically_derived]
impl<'a> ::kirin::ir::HasDigraphs<'a> for Constant {
    type Iter = ConstantDigraphsIter<'a>;
    fn digraphs(&'a self) -> Self::Iter {
        let Self { result } = self;
        ConstantDigraphsIter {
            inner: std::iter::empty::<&'a ::kirin::ir::DiGraph>(),
        }
    }
}
#[automatically_derived]
#[doc(hidden)]
pub struct ConstantDigraphsIter<'a> {
    inner: std::iter::Empty<&'a ::kirin::ir::DiGraph>,
}
#[automatically_derived]
impl<'a> Iterator for ConstantDigraphsIter<'a> {
    type Item = &'a ::kirin::ir::DiGraph;
    fn next(&mut self) -> Option<Self::Item> {
        self.inner.next()
    }
}
#[automatically_derived]
impl<'a> ::kirin::ir::HasDigraphsMut<'a> for Constant {
    type IterMut = ConstantDigraphsMutIter<'a>;
    fn digraphs_mut(&'a mut self) -> Self::IterMut {
        let Self { result } = self;
        ConstantDigraphsMutIter {
            inner: std::iter::empty::<&'a mut ::kirin::ir::DiGraph>(),
        }
    }
}
#[automatically_derived]
#[doc(hidden)]
pub struct ConstantDigraphsMutIter<'a> {
    inner: std::iter::Empty<&'a mut ::kirin::ir::DiGraph>,
}
#[automatically_derived]
impl<'a> Iterator for ConstantDigraphsMutIter<'a> {
    type Item = &'a mut ::kirin::ir::DiGraph;
    fn next(&mut self) -> Option<Self::Item> {
        self.inner.next()
    }
}
#[automatically_derived]
impl<'a> ::kirin::ir::HasUngraphs<'a> for Constant {
    type Iter = ConstantUngraphsIter<'a>;
    fn ungraphs(&'a self) -> Self::Iter {
        let Self { result } = self;
        ConstantUngraphsIter {
            inner: std::iter::empty::<&'a ::kirin::ir::UnGraph>(),
        }
    }
}
#[automatically_derived]
#[doc(hidden)]
pub struct ConstantUngraphsIter<'a> {
    inner: std::iter::Empty<&'a ::kirin::ir::UnGraph>,
}
#[automatically_derived]
impl<'a> Iterator for ConstantUngraphsIter<'a> {
    type Item = &'a ::kirin::ir::UnGraph;
    fn next(&mut self) -> Option<Self::Item> {
        self.inner.next()
    }
}
#[automatically_derived]
impl<'a> ::kirin::ir::HasUngraphsMut<'a> for Constant {
    type IterMut = ConstantUngraphsMutIter<'a>;
    fn ungraphs_mut(&'a mut self) -> Self::IterMut {
        let Self { result } = self;
        ConstantUngraphsMutIter {
            inner: std::iter::empty::<&'a mut ::kirin::ir::UnGraph>(),
        }
    }
}
#[automatically_derived]
#[doc(hidden)]
pub struct ConstantUngraphsMutIter<'a> {
    inner: std::iter::Empty<&'a mut ::kirin::ir::UnGraph>,
}
#[automatically_derived]
impl<'a> Iterator for ConstantUngraphsMutIter<'a> {
    type Item = &'a mut ::kirin::ir::UnGraph;
    fn next(&mut self) -> Option<Self::Item> {
        self.inner.next()
    }
}
#[automatically_derived]
impl ::kirin::ir::IsTerminator for Constant {
    fn is_terminator(&self) -> bool {
        false
    }
}
#[automatically_derived]
impl ::kirin::ir::IsConstant for Constant {
    fn is_constant(&self) -> bool {
        true
    }
}
#[automatically_derived]
impl ::kirin::ir::IsPure for Constant {
    fn is_pure(&self) -> bool {
        true
    }
}
#[automatically_derived]
impl ::kirin::ir::IsSpeculatable for Constant {
    fn is_speculatable(&self) -> bool {
        true
    }
}
#[automatically_derived]
impl ::kirin::ir::IsEdge for Constant {
    fn is_edge(&self) -> bool {
        false
    }
}
#[automatically_derived]
impl ::kirin::ir::Dialect for Constant {
    type Type = SimpleType;
}
#[automatically_derived]
impl ::kirin::ir::HasSignature<Self> for Constant {
    fn signature(&self) -> Option<::kirin::ir::Signature<<Self as ::kirin::ir::Dialect>::Type>> {
        None
    }
}
#[automatically_derived]
impl ::kirin::ir::HasCallableBody for Constant {
    fn callable_body(&self) -> ::core::option::Option<::kirin::ir::Body> {
        ::core::option::Option::None
    }
}
