crates/kirin-derive-ir/src/tests/snapshots/kirin_derive_ir__tests__dialect__dialect_derive_struct_edge.snap
---
source: crates/kirin-derive-ir/src/tests/dialect.rs
expression: generate_dialect_code(input)
---
#[automatically_derived]
impl<'a> ::kirin::ir::HasArguments<'a> for ZxWire {
    type Iter = ZxWireArgumentsIter<'a>;
    fn arguments(&'a self) -> Self::Iter {
        let Self { res } = self;
        ZxWireArgumentsIter {
            inner: std::iter::empty::<&'a ::kirin::ir::SSAValue>(),
        }
    }
}
#[automatically_derived]
#[doc(hidden)]
pub struct ZxWireArgumentsIter<'a> {
    inner: std::iter::Empty<&'a ::kirin::ir::SSAValue>,
}
#[automatically_derived]
impl<'a> Iterator for ZxWireArgumentsIter<'a> {
    type Item = &'a ::kirin::ir::SSAValue;
    fn next(&mut self) -> Option<Self::Item> {
        self.inner.next()
    }
}
#[automatically_derived]
impl<'a> ::kirin::ir::HasArgumentsMut<'a> for ZxWire {
    type IterMut = ZxWireArgumentsMutIter<'a>;
    fn arguments_mut(&'a mut self) -> Self::IterMut {
        let Self { res } = self;
        ZxWireArgumentsMutIter {
            inner: std::iter::empty::<&'a mut ::kirin::ir::SSAValue>(),
        }
    }
}
#[automatically_derived]
#[doc(hidden)]
pub struct ZxWireArgumentsMutIter<'a> {
    inner: std::iter::Empty<&'a mut ::kirin::ir::SSAValue>,
}
#[automatically_derived]
impl<'a> Iterator for ZxWireArgumentsMutIter<'a> {
    type Item = &'a mut ::kirin::ir::SSAValue;
    fn next(&mut self) -> Option<Self::Item> {
        self.inner.next()
    }
}
#[automatically_derived]
impl<'a> ::kirin::ir::HasResults<'a> for ZxWire {
    type Iter = ZxWireResultsIter<'a>;
    fn results(&'a self) -> Self::Iter {
        let Self { res } = self;
        ZxWireResultsIter {
            inner: std::iter::once(res),
        }
    }
}
#[automatically_derived]
#[doc(hidden)]
pub struct ZxWireResultsIter<'a> {
    inner: std::iter::Once<&'a ::kirin::ir::ResultValue>,
}
#[automatically_derived]
impl<'a> Iterator for ZxWireResultsIter<'a> {
    type Item = &'a ::kirin::ir::ResultValue;
    fn next(&mut self) -> Option<Self::Item> {
        self.inner.next()
    }
}
#[automatically_derived]
impl<'a> ::kirin::ir::HasResultsMut<'a> for ZxWire {
    type IterMut = ZxWireResultsMutIter<'a>;
    fn results_mut(&'a mut self) -> Self::IterMut {
        let Self { res } = self;
        ZxWireResultsMutIter {
            inner: std::iter::once(res),
        }
    }
}
#[automatically_derived]
#[doc(hidden)]
pub struct ZxWireResultsMutIter<'a> {
    inner: std::iter::Once<&'a mut ::kirin::ir::ResultValue>,
}
#[automatically_derived]
impl<'a> Iterator for ZxWireResultsMutIter<'a> {
    type Item = &'a mut ::kirin::ir::ResultValue;
    fn next(&mut self) -> Option<Self::Item> {
        self.inner.next()
    }
}
#[automatically_derived]
impl<'a> ::kirin::ir::HasBlocks<'a> for ZxWire {
    type Iter = ZxWireBlocksIter<'a>;
    fn blocks(&'a self) -> Self::Iter {
        let Self { res } = self;
        ZxWireBlocksIter {
            inner: std::iter::empty::<&'a ::kirin::ir::Block>(),
        }
    }
}
#[automatically_derived]
#[doc(hidden)]
pub struct ZxWireBlocksIter<'a> {
    inner: std::iter::Empty<&'a ::kirin::ir::Block>,
}
#[automatically_derived]
impl<'a> Iterator for ZxWireBlocksIter<'a> {
    type Item = &'a ::kirin::ir::Block;
    fn next(&mut self) -> Option<Self::Item> {
        self.inner.next()
    }
}
#[automatically_derived]
impl<'a> ::kirin::ir::HasBlocksMut<'a> for ZxWire {
    type IterMut = ZxWireBlocksMutIter<'a>;
    fn blocks_mut(&'a mut self) -> Self::IterMut {
        let Self { res } = self;
        ZxWireBlocksMutIter {
            inner: std::iter::empty::<&'a mut ::kirin::ir::Block>(),
        }
    }
}
#[automatically_derived]
#[doc(hidden)]
pub struct ZxWireBlocksMutIter<'a> {
    inner: std::iter::Empty<&'a mut ::kirin::ir::Block>,
}
#[automatically_derived]
impl<'a> Iterator for ZxWireBlocksMutIter<'a> {
    type Item = &'a mut ::kirin::ir::Block;
    fn next(&mut self) -> Option<Self::Item> {
        self.inner.next()
    }
}
#[automatically_derived]
impl<'a> ::kirin::ir::HasSuccessors<'a> for ZxWire {
    type Iter = ZxWireSuccessorsIter<'a>;
    fn successors(&'a self) -> Self::Iter {
        let Self { res } = self;
        ZxWireSuccessorsIter {
            inner: std::iter::empty::<&'a ::kirin::ir::Successor>(),
        }
    }
}
#[automatically_derived]
#[doc(hidden)]
pub struct ZxWireSuccessorsIter<'a> {
    inner: std::iter::Empty<&'a ::kirin::ir::Successor>,
}
#[automatically_derived]
impl<'a> Iterator for ZxWireSuccessorsIter<'a> {
    type Item = &'a ::kirin::ir::Successor;
    fn next(&mut self) -> Option<Self::Item> {
        self.inner.next()
    }
}
#[automatically_derived]
impl<'a> ::kirin::ir::HasSuccessorsMut<'a> for ZxWire {
    type IterMut = ZxWireSuccessorsMutIter<'a>;
    fn successors_mut(&'a mut self) -> Self::IterMut {
        let Self { res } = self;
        ZxWireSuccessorsMutIter {
            inner: std::iter::empty::<&'a mut ::kirin::ir::Successor>(),
        }
    }
}
#[automatically_derived]
#[doc(hidden)]
pub struct ZxWireSuccessorsMutIter<'a> {
    inner: std::iter::Empty<&'a mut ::kirin::ir::Successor>,
}
#[automatically_derived]
impl<'a> Iterator for ZxWireSuccessorsMutIter<'a> {
    type Item = &'a mut ::kirin::ir::Successor;
    fn next(&mut self) -> Option<Self::Item> {
        self.inner.next()
    }
}
#[automatically_derived]
impl<'a> ::kirin::ir::HasCFG<'a> for ZxWire {
    type Iter = ZxWireCFGIter<'a>;
    fn cfgs(&'a self) -> Self::Iter {
        let Self { res } = self;
        ZxWireCFGIter {
            inner: std::iter::empty::<&'a ::kirin::ir::CFG>(),
        }
    }
}
#[automatically_derived]
#[doc(hidden)]
pub struct ZxWireCFGIter<'a> {
    inner: std::iter::Empty<&'a ::kirin::ir::CFG>,
}
#[automatically_derived]
impl<'a> Iterator for ZxWireCFGIter<'a> {
    type Item = &'a ::kirin::ir::CFG;
    fn next(&mut self) -> Option<Self::Item> {
        self.inner.next()
    }
}
#[automatically_derived]
impl<'a> ::kirin::ir::HasCFGMut<'a> for ZxWire {
    type IterMut = ZxWireCFGMutIter<'a>;
    fn cfgs_mut(&'a mut self) -> Self::IterMut {
        let Self { res } = self;
        ZxWireCFGMutIter {
            inner: std::iter::empty::<&'a mut ::kirin::ir::CFG>(),
        }
    }
}
#[automatically_derived]
#[doc(hidden)]
pub struct ZxWireCFGMutIter<'a> {
    inner: std::iter::Empty<&'a mut ::kirin::ir::CFG>,
}
#[automatically_derived]
impl<'a> Iterator for ZxWireCFGMutIter<'a> {
    type Item = &'a mut ::kirin::ir::CFG;
    fn next(&mut self) -> Option<Self::Item> {
        self.inner.next()
    }
}
#[automatically_derived]
impl<'a> ::kirin::ir::HasDigraphs<'a> for ZxWire {
    type Iter = ZxWireDigraphsIter<'a>;
    fn digraphs(&'a self) -> Self::Iter {
        let Self { res } = self;
        ZxWireDigraphsIter {
            inner: std::iter::empty::<&'a ::kirin::ir::DiGraph>(),
        }
    }
}
#[automatically_derived]
#[doc(hidden)]
pub struct ZxWireDigraphsIter<'a> {
    inner: std::iter::Empty<&'a ::kirin::ir::DiGraph>,
}
#[automatically_derived]
impl<'a> Iterator for ZxWireDigraphsIter<'a> {
    type Item = &'a ::kirin::ir::DiGraph;
    fn next(&mut self) -> Option<Self::Item> {
        self.inner.next()
    }
}
#[automatically_derived]
impl<'a> ::kirin::ir::HasDigraphsMut<'a> for ZxWire {
    type IterMut = ZxWireDigraphsMutIter<'a>;
    fn digraphs_mut(&'a mut self) -> Self::IterMut {
        let Self { res } = self;
        ZxWireDigraphsMutIter {
            inner: std::iter::empty::<&'a mut ::kirin::ir::DiGraph>(),
        }
    }
}
#[automatically_derived]
#[doc(hidden)]
pub struct ZxWireDigraphsMutIter<'a> {
    inner: std::iter::Empty<&'a mut ::kirin::ir::DiGraph>,
}
#[automatically_derived]
impl<'a> Iterator for ZxWireDigraphsMutIter<'a> {
    type Item = &'a mut ::kirin::ir::DiGraph;
    fn next(&mut self) -> Option<Self::Item> {
        self.inner.next()
    }
}
#[automatically_derived]
impl<'a> ::kirin::ir::HasUngraphs<'a> for ZxWire {
    type Iter = ZxWireUngraphsIter<'a>;
    fn ungraphs(&'a self) -> Self::Iter {
        let Self { res } = self;
        ZxWireUngraphsIter {
            inner: std::iter::empty::<&'a ::kirin::ir::UnGraph>(),
        }
    }
}
#[automatically_derived]
#[doc(hidden)]
pub struct ZxWireUngraphsIter<'a> {
    inner: std::iter::Empty<&'a ::kirin::ir::UnGraph>,
}
#[automatically_derived]
impl<'a> Iterator for ZxWireUngraphsIter<'a> {
    type Item = &'a ::kirin::ir::UnGraph;
    fn next(&mut self) -> Option<Self::Item> {
        self.inner.next()
    }
}
#[automatically_derived]
impl<'a> ::kirin::ir::HasUngraphsMut<'a> for ZxWire {
    type IterMut = ZxWireUngraphsMutIter<'a>;
    fn ungraphs_mut(&'a mut self) -> Self::IterMut {
        let Self { res } = self;
        ZxWireUngraphsMutIter {
            inner: std::iter::empty::<&'a mut ::kirin::ir::UnGraph>(),
        }
    }
}
#[automatically_derived]
#[doc(hidden)]
pub struct ZxWireUngraphsMutIter<'a> {
    inner: std::iter::Empty<&'a mut ::kirin::ir::UnGraph>,
}
#[automatically_derived]
impl<'a> Iterator for ZxWireUngraphsMutIter<'a> {
    type Item = &'a mut ::kirin::ir::UnGraph;
    fn next(&mut self) -> Option<Self::Item> {
        self.inner.next()
    }
}
#[automatically_derived]
impl ::kirin::ir::IsTerminator for ZxWire {
    fn is_terminator(&self) -> bool {
        false
    }
}
#[automatically_derived]
impl ::kirin::ir::IsConstant for ZxWire {
    fn is_constant(&self) -> bool {
        false
    }
}
#[automatically_derived]
impl ::kirin::ir::IsPure for ZxWire {
    fn is_pure(&self) -> bool {
        false
    }
}
#[automatically_derived]
impl ::kirin::ir::IsSpeculatable for ZxWire {
    fn is_speculatable(&self) -> bool {
        false
    }
}
#[automatically_derived]
impl ::kirin::ir::IsEdge for ZxWire {
    fn is_edge(&self) -> bool {
        true
    }
}
#[automatically_derived]
impl ::kirin::ir::Dialect for ZxWire {
    type Type = SimpleType;
}
#[automatically_derived]
impl ::kirin::ir::HasSignature<Self> for ZxWire {
    fn signature(&self) -> Option<::kirin::ir::Signature<<Self as ::kirin::ir::Dialect>::Type>> {
        None
    }
}
#[automatically_derived]
impl ::kirin::ir::HasCallableBody for ZxWire {
    fn callable_body(&self) -> ::core::option::Option<::kirin::ir::Body> {
        ::core::option::Option::None
    }
}
